Fix z-index

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,6 +25,13 @@ html{
 	}
 	.cell-container{
 		transition: 0.4s;
+		&.active{
+			position:absolute;	
+			z-index:1000;
+		}
+		&.zoom .cell{
+			transform: scale(1.5);
+		}
 	}
 	.cell{
 		width: 350px;
@@ -59,10 +66,10 @@ html{
 	transition: 0.6s;
 }
 	/*  UPDATED! flip the pane when hovered */
-	.flip-container.active .back {
+	.cell-container.active .back {
 		transform: rotateY(0deg);
 	}
-	.flip-container.active .front {
+	.cell-container.active .front {
 	    transform: rotateY(180deg);
 	}
 
@@ -97,9 +104,7 @@ html{
 	transform: rotateY(-180deg);
 }
 
-.zoom{
-	transform: scale(1.2);
-}
+
 .screen{
 	position:fixed;
 	width: 100%;
